--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 before_install:
   - docker build -t crazygoatstudio/apigator .
-  - docker run -p 5000:5000 --rm --name travis-eve crazygoatstudio/apigator
+  - docker run -d -p 5000:5000 --name travis-eve crazygoatstudio/apigator
   - docker ps -a
   - curl -i http://127.0.0.1:5000
 #  - docker run carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec rake test"
