--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_install:
   - docker build -t crazygoatstudio/apigator .
   - docker run -d -p 5000:5000 --name travis-eve crazygoatstudio/apigator
   - docker ps -a
-  - curl -i http://localhost:5000
+  - curl -i http://0.0.0.0:5000/lists
+  - curl -i http://0.0.0.0:5000
 #  - docker run carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec rake test"
 
 script:
