--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 sudo: required
-
-language: ruby
-
 services:
   - docker
 
 before_install:
+  - docker run --name mongo_eve -d mongo:latest
   - docker build -t crazygoatstudio/apigator .
-  - docker run -d -p 0.0.0.0:5000:5000 --name travis-eve crazygoatstudio/apigator
+  - docker run -d -p 0.0.0.0:5000:5000 --name travis-eve --link mongo_eve:mongo crazygoatstudio/apigator
   - docker ps -a
   - sleep 15
 
